[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/minecraftia_8.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/Debug/DebugSidePanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.133333, 0.12549, 0.203922, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="Theme" id=11]
default_font = ExtResource( 1 )
Label/colors/font_color = Color( 0.984314, 0.94902, 0.211765, 1 )
Panel/styles/panel = SubResource( 10 )
PanelContainer/styles/panel = SubResource( 10 )
RichTextLabel/fonts/normal_font = null

[node name="DebugSidePanel" type="Control"]
modulate = Color( 1, 1, 1, 0.427451 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -145.0
margin_top = 34.0
theme = SubResource( 11 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 99.0
margin_bottom = 139.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 95.0
margin_bottom = 135.0

[node name="Anchor" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 11.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Anchor"]
margin_right = 36.0
margin_bottom = 11.0
text = "anchor"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Anchor"]
margin_left = 40.0
margin_right = 82.0
margin_bottom = 11.0
text = "anchor1"

[node name="Gamepad" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 91.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Gamepad"]
margin_right = 42.0
margin_bottom = 11.0
text = "gamepad	"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Gamepad"]
margin_left = 46.0
margin_right = 60.0
margin_bottom = 11.0
text = "0.0"

[node name="GamepadLayout" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 91.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GamepadLayout"]
margin_right = 42.0
margin_bottom = 11.0
text = "gamepad	"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GamepadLayout"]
margin_left = 46.0
margin_right = 60.0
margin_bottom = 11.0
text = "0.0"

[node name="Level" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 91.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Level"]
margin_right = 24.0
margin_bottom = 11.0
text = "level"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Level"]
margin_left = 28.0
margin_right = 42.0
margin_bottom = 11.0
text = "0.0"

[node name="PlayerPosition" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 91.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerPosition"]
margin_right = 73.0
margin_bottom = 11.0
text = "player position"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerPosition"]
margin_left = 77.0
margin_right = 91.0
margin_bottom = 11.0
text = "0.0"

[node name="PlayerState" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 91.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerState"]
margin_right = 61.0
margin_bottom = 11.0
text = "player state"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerState"]
margin_left = 65.0
margin_right = 79.0
margin_bottom = 11.0
text = "0.0"

[node name="HitsTaken" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 91.0
margin_bottom = 101.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HitsTaken"]
margin_right = 47.0
margin_bottom = 11.0
text = "HitsTaken"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HitsTaken"]
margin_left = 51.0
margin_right = 65.0
margin_bottom = 11.0
text = "0.0"

[node name="GameOver" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 91.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GameOver"]
margin_right = 48.0
margin_bottom = 11.0
text = "GameOver"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GameOver"]
margin_left = 52.0
margin_right = 66.0
margin_bottom = 11.0
text = "0.0"

[node name="SpawnPoint" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 91.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SpawnPoint"]
margin_right = 54.0
margin_bottom = 11.0
text = "SpawnPoint"

[node name="Value" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SpawnPoint"]
margin_left = 58.0
margin_right = 72.0
margin_bottom = 11.0
text = "0.0"
